<resources>
    <!--    «\u0020» is for space at the beginning or end of line-->
    <string name="app_name">Friends</string>
    <string name="interactions_journal">Interactions journal</string>
    <string name="label_settings">Options</string>
    <string name="friends">Friends</string>
    <string name="add_interaction">Add Interaction</string>
    <string name="type_input_invitation">Type:</string>
    <string name="date_input_invitation">Date:</string>
    <string name="hint_enter_date">Enter date</string>
    <string name="friends_input_invitation">Friends:</string>
    <string name="hint_enter_friends">Enter friend names</string>
    <string name="comment_input_invitation">Notes:</string>
    <string name="hint_interaction_comment">Describe interaction</string>
    <string name="last_interactions">Last Interactions</string>
    <string name="edit_selection">Edit</string>
    <string name="delete_selection">Delete</string>
    <string name="add_friend">New friend</string>
    <string name="action_bar_title_edit_friend">Edit </string>
    <string name="icon_title_save">Save</string>
    <string name="import_database">Import data</string>
    <string name="export_database">Export data</string>
    <string name="add_new_interaction_type">Add new...</string>
    <string name="type_of_interaction">Type of interaction</string>
...
    <string name="toast_notice_friend_created">\u0020is created</string>
    <string name="toast_notice_friend_forgotten">\u0020is forgotten</string>
    <string name="toast_notice_friend_deleted">\u0020deleted</string>
    <string name="toast_notice_friend_updated">\u0020updated</string>
    <string name="toast_notice_interactions_deleted">Interactions deleted</string>
    <string name="interaction_type_name_meeting">Meeting</string>
    <string name="interaction_type_name_texting">Texting</string>
    <string name="interaction_type_name_call">Call</string>
    <string name="edit_interaction">Edit interaction</string>
    <string name="days_ago">%d d. ago</string>
    <string name="per_days">per %d d.</string>
    <string name="new_interaction_type">New interaction type</string>
    <string name="edit_interaction_type">Edit interaction type</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="dont_have_such_friend">You don\'t have friend named «%s»</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="forget">Forget</string>
    <string name="edit_name">Edit name</string>
    <string name="export_in_progress">Export in progress</string>
    <string name="import_in_progress">Import in progress</string>
    <string name="friends_deleted">Friends deleted</string>
    <string name="type_updated">Type updated</string>
...
