...
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/deit_name"
        android:inputType="textCapWords"
        android:hint="@string/type_of_interaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
        />

    <EditText
        android:id="@+id/deit_frequency"
        android:inputType="number"
        android:hint="@string/frequency_of_interaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
...
