...
    tools:context=".activity.FriendPageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/afp_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Friend's notes"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:padding="8dp"
                    />
...
