...
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="@string/name"
                    />

                <EditText
                    android:id="@+id/aef_edit_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:inputType="textPersonName|textCapWords|textMultiLine"
                    />

...
